# napari-affinities

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  scratch.py  scratch2.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
scripts/: scratch.py
src/napari_affinities/: __init__.py  napari.yaml  sample_data.py  widget.py
src/napari_affinities/_tests/: conftest.py  test_reader.py  test_sample_data.py  test_samples.py  test_widget.py  test_writer.py
src/napari_affinities/bioimageio/: helpers.py
src/napari_affinities/gp/: napari_label_source.py  pipeline.py
src/napari_affinities/gp/nodes/: __init__.py  add_local_shape_descriptor.py  binarize.py  napari_image_source.py  napari_label_source.py  np_source.py  ones_source.py
src/napari_affinities/static/: mws_info.html
src/napari_affinities/widgets/: affinities.py  fov.py  gui_helpers.py  mutex_watershed.py
