[metadata]
name = napari-affinities
version = 0.0.1
author = William Patton
author_email = will.hunter.patton@gmail.com
url = https://github.com/pattonw/napari-affinities
license = MIT
description = A plugin for creating, visualizing, and processing affinities
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/pattonw/napari-affinities/issues
    Documentation = https://github.com/pattonw/napari-affinities#README.md
    Source Code = https://github.com/pattonw/napari-affinities
    User Support = https://github.com/pattonw/napari-affinities/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    zarr
    magicgui
    bioimageio.core
    gunpowder
    lsd
    affogato
    matplotlib

[options.packages.find]
where = src

[options.package_data]
napari-affinities = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-affinities = napari_affinities:napari.yaml
